Edited paragraph styling to make it no longer invisible.

--- a/Client/Style.css
+++ b/Client/Style.css
@@ -25,9 +25,8 @@ select{
     border-radius: 8px;
 }
 
-p{
+p #registration{
     color:rgb(121, 7, 7); 
-    display: none;
 }
 
 .inline{
